fix(we: themes: systemcolors): remove unnecessary rule for excluding collapsed tabs

--- a/webextensions/sidebar/styles/square/systemcolors.css
+++ b/webextensions/sidebar/styles/square/systemcolors.css
@@ -31,7 +31,7 @@
     /*mix-blend-mode: multiply;*/
 }
 
-.tab:not(.collapsed),
+.tab,
 .newtab-button-box {
     border-style: solid;
 }
